[package]
name = "riot-build"
version = "0.1.0"
authors = ["Kaspar Schleiser <kaspar@schleiser.de>"]
edition = "2018"
links = "riot-build"
license = "LGPLv2.1"

[dependencies]
cfg-if = "1.0.0"

riot-rs-rt = "0.1.0"
riot-rs-core = { optional = true, version = "0.1.0" }

[features]
riot-os-core = [ "riot-rs-core" ]
riot-app = []
